<resources>
    <string name="app_name">MH-Prueba2-Proyecto</string>
    <string name="texto_IVBannerEvento">Subir portada del evento:</string>
    <string name="textoTVSubirPortada">Subir portada del evento</string>
    <string name="textoTVDatosEvento">DATOS DEL EVENTO:</string>
    <string name="textoETNombreEvento">Ingrese el nombre del evento</string>
    <string name="textoETLugarEvento">Ingrese el lugar del evento</string>
    <string name="textoETDireccionEvento">Ingrese la dirección del evento (opcional)</string>
    <string name="textoTVFechaEvento">Fecha:</string>
    <string name="textoETFechaEvento">DD/MM/AA</string>
    <string name="textoTVHoraEvento">Hora:</string>
    <string name="textoETHoraEvento">00:00 P.M.</string>
    <string name="textoTVCategoriaEvento">Categoría:</string>
    <string name="textoTVDescripcionEvento">Descripción del evento:</string>
    <string name="textoETDescripcionEvento">Escriba la descripción de su evento</string>
    <string name="btnContinuar">Continuar</string>
    <string name="textoTVAdmisionEvento">ADMISIÓN:</string>
    <string name="textoTVPregunta">¿Cualquier persona puede asistir?</string>
    <string name="textoSi">Si</string>
    <string name="textoNo">No</string>
    <string name="textoTVRangoEdad">Rango de edad:</string>
    <string name="TextoMinima">Mínima:</string>
    <string name="filler__">--</string>
    <string name="textoMaxima">Máxima:</string>
    <string name="textoSWAceptarManualmente">Aceptar manualmente cada solicitud:</string>
    <string name="textoTVRequisitosAdicionales">REQUISITOS ADICIONALES:</string>
    <string name="TextoTVAforo">Aforo:</string>
    <string name="textoMinimo">Mínimo:</string>
    <string name="textoMaximo">Máximo:</string>
    <string name="textoSWCancelar">Cancelar si no alcanza aforo mínimo:</string>
    <string name="textoTVTiempoCancelacion">Indique cuanto tiempo antes del evento cancelar:</string>
    <string name="filler00">00</string>
    <string name="textoMeses">Meses</string>
    <string name="textoDias">Días</string>
    <string name="textoHoras">Horas</string>
    <string name="textoMinutos">Minutos</string>
    <string name="textoSWGaleriaEvento">Galería del evento</string>
    <string name="textoSWPermitirSubirFotos">Permitir que asistentes añadan fotos</string>
    <string name="textoTVPagos">INFORMACIÓN SOBRE PAGOS:</string>
    <string name="textotvInfoPagos">Establezca los precios de su evento</string>
    <string name="textoEventoGratuito">Evento gratuito</string>
    <string name="textoTVEntradaGeneral">Entrada General</string>
    <string name="filler$">$</string>
    <string name="valorDefaultPrecioGeneral">8.00</string>
    <string name="textoTVEntradaVIP">Entrada VIP</string>
    <string name="ValorDefaultPrecioVIP">12.00</string>
    <string name="textoTVAdvertencia">El manejo de los cobros es completa responsabilidad del organizador</string>
    <string name="textoBtnCrearEvento">Crear evento</string>
    <string name="tx_cat_musica">MÚSICA</string>
    <string name="tx_cat_religoso">RELIGIOSO</string>
    <string name="tx_cat_deportes">DEPORTES</string>
    <string name="tx_cat_cultura">CULTURA</string>

</resources>