<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical"
    tools:context=".CrearEvento2">

    <TextView
        android:id="@+id/tvAdmision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/textoTVAdmisionEvento"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/divisor"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/tvpregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textoTVPregunta"
        android:textSize="18sp"
        android:textStyle="normal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/borde">

            <RadioButton
                android:id="@+id/rbSi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/textoSi" />

            <RadioButton
                android:id="@+id/rbNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/textoNo" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRangoEdad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoTVRangoEdad"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEdadMinima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/TextoMinima"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/etMinima"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="9dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/filler__"
                    tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

                <CheckBox
                    android:id="@+id/ckbMinima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvEdadMaxima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoMaxima"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/etMaxima"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/filler__"
                    tools:ignore="LabelFor" />

                <CheckBox
                    android:id="@+id/ckbMaxima"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/swAceptarSolicitudManualmente"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/textoSWAceptarManualmente"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>


    <TextView
        android:id="@+id/tvRequisitosAdicionales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/textoTVRequisitosAdicionales"
        android:textSize="20sp"
        android:textStyle="bold"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/divisor"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borde"
            android:orientation="vertical"
            android:paddingTop="5dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tvAforo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TextoTVAforo"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAforoMinimo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoMinimo"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/etAforoMinimo"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="9dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/filler__"
                    tools:ignore="LabelFor" />

                <CheckBox
                    android:id="@+id/ckbAforoMinimo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvAforoMaximo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textoMaximo"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/etAforoMaximo"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/filler__"
                    tools:ignore="LabelFor" />

                <CheckBox
                    android:id="@+id/ckbAforoMaximo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            >

            <Switch
                android:id="@+id/swCancelarSiNoCumpleAforo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textoSWCancelar"
                android:textSize="18sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvTiempoCancelacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textoTVTiempoCancelacion"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/etMeses"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:background="@drawable/borde"
                    android:gravity="center"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="@string/filler00"
                    android:textSize="18sp"
                    tools:ignore="DuplicateSpeakableTextCheck,LabelFor" />

                <TextView
                    android:id="@+id/tvMeses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/textoMeses"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/etDias"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:gravity="center"
                    android:text="@string/filler00"
                    android:background="@drawable/borde"
                    android:maxLength="2"
                    android:textSize="18sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/tvDias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/textoDias"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/etHoras"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:gravity="center"
                    android:text="@string/filler00"
                    android:background="@drawable/borde"
                    android:maxLength="2"
                    android:textSize="18sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/tvHoras"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/textoHoras"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:orientation="vertical"
                android:layout_marginStart="8dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/etMinutos"
                    android:layout_width="50dp"
                    android:layout_height="48dp"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:gravity="center"
                    android:text="@string/filler00"
                    android:background="@drawable/borde"
                    android:maxLength="2"
                    android:textSize="18sp"
                    tools:ignore="LabelFor" />

                <TextView
                    android:id="@+id/tvMinutos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/textoMinutos"
                    android:textSize="12sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Switch
        android:id="@+id/swGaleria"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/textoSWGaleriaEvento"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <Switch
        android:id="@+id/swPermitirSubirFotos"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/textoSWPermitirSubirFotos"
        android:textSize="18sp"
        tools:ignore="UseSwitchCompatOrMaterialXml"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <Button
        android:id="@+id/btnContinuar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/btnContinuar" />

</LinearLayout>