<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="40dp">

    <TextView
        android:id="@+id/tv_titulo_categorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="CATEGORÍAS"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/layout_deportes"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#0A6D20"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_categoria_deportes"
            android:layout_width="37dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/sports"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/tv_deportes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tx_cat_deportes"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/img_deportes"
            android:layout_width="95dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/img_deportes" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_religioso"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#0A6D5E"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_categoria_religioso"
            android:layout_width="37dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/religion" />

        <TextView
            android:id="@+id/tv_religioso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tx_cat_religoso"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/img_religioso"
            android:layout_width="88dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/img_religioso" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_musica"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#6D0A60"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_categoria_musica"
            android:layout_width="37dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/music" />

        <TextView
            android:id="@+id/tv_musica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tx_cat_musica"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/img_musica"
            android:layout_width="92dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/img_musica" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_arte"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#6D0A0A"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_categoria_arte"
            android:layout_width="37dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/culture" />

        <TextView
            android:id="@+id/tv_cultura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/tx_cat_cultura"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/img_cultura"
            android:layout_width="92dp"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/img_cultura" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_gastronomia"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#BC9508"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_categoria_gastronomia"
            android:layout_width="37dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/gastronomia" />

        <TextView
            android:id="@+id/tv_gastronomia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="GASTRONOMÍA"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/img_gastronomia"
            android:layout_width="95dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/img_gastronomia" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_tecnologia"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#0A176D"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_categoria_tecnologia"
            android:layout_width="37dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/tecnologia" />

        <TextView
            android:id="@+id/tv_tecnologia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="TECNOLOGÍA"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/img_tecnologia"
            android:layout_width="95dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/img_tecnologia" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_infantil"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#D53896"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_categoria_infantil"
            android:layout_width="37dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/infantil" />

        <TextView
            android:id="@+id/tv_infantil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="INFANTIL"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/img_infantil"
            android:layout_width="95dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/img_infantil" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_salud"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="10dp"
        android:background="#CA1212"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_categoria_salud"
            android:layout_width="37dp"
            android:layout_height="43dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:srcCompat="@drawable/salud" />

        <TextView
            android:id="@+id/tv_salud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_bold"
            android:text="SALUD Y BIENESTAR"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/img_salud"
            android:layout_width="95dp"
            android:layout_height="65dp"
            app:srcCompat="@drawable/img_salud" />

    </LinearLayout>



</LinearLayout>